[package]
name = "blinky"
version = "0.1.0"
authors = ["Florian Jung <flo@windfis.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
#panic-halt = "0.2"
stm32f4 = "0.13"
heapless = "0.7"
lazy_static = {version = "1.4.0", features=["spin_no_std"]}

[dependencies.stm32f4xx-hal]
version = "0.10"
#path="/home/flo/stm32f4xx-hal"
#features = ["rt", "stm32f407"] # replace the model of your microcontroller here
features = ["rt", "stm32f411"] # replace the model of your microcontroller here FIXME

[unstable]
build-std = ["core"]

[profile.release]
debug = true
